# t

./: Makefile.common  README.org
base-go/: .gitignore  .golangci.yml  .goreleaser.yaml  Makefile  README.org  TEMPLATE_INFO.org  flake.nix  go.mod
base-go/.github/workflows/: lint.yml  release.yml  test.yml
base-go/cmd/bake/: main.go  main_test.go
cookie-cline/: .clineignore  .gitignore  Justfile  README.md  README.org
cookie-cline/docs/for_ai/memory_bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
cookie-cline/docs/for_ai/rules/: base_instructions.md  meta_feature_brainstorming.md  meta_memory_bank.md  meta_rules_location.md
fast-api-starter/: .envrc.example  .gitignore  Justfile  flake.nix
fast-api-starter/backend/: .envrc.example  flake.nix  pyproject.toml
fast-api-starter/backend/src/pasoli/: config.py  main.py
fast-api-starter/backend/src/pasoli/telemetry/: log.py
hono-starter/: package.json  pnpm-lock.yaml  tsconfig.json
hono-starter/src/: app.ts
hono-starter/tests/: sum.test.ts
node-esm-ts/: Justfile  README.org  eslint.config.mjs  flake.nix  package.json  pnpm-lock.yaml
node-esm-ts/src/: app.ts
old-node-cjs/: .eslintrc.cjs  .prettierrc.json  Makefile  Makefile.common  README.org  TEMPLATE_INFO.org  package-lock.json  package.json  tsconfig.json
old-node-cjs/tests/: app.test.js
old-svelte/: Justfile  flake.nix  svelte.config.js
old-svelte/src/routes/: +layout.svelte  +page.svelte
t-base-svelte/: package.json  pnpm-lock.yaml
(+3 files in other folders)
